Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test2.java
/*
Test2
Objetivo: Detectar un error en la declaracion de una variable.
Falta un identificador para el tipo String.
*/

class UnaClase extends Hola {
	varinst String
}